[package]
name = "syntax-rs"
version = "1.1.1"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["Edvin Flodin <edvin.flodin+syntaxrs@gmail.com>"]
description = "A library for parsing programming languages."
documentation = "https://docs.rs/syntax/1.1.1/syntax"
repository = "https://github.com/Bitbot25/pangvm/syntax-rs"

# A message to future me: DON'T FORGET DO UPDATE THE DOCUMENTATION AAAAAAA

[dependencies]
unicode-xid = "0.2.3"
cfg-if = "1.0.0"

[target.'cfg(unix)'.dependencies] # For unix
libc = "0.2.126"

[target.'cfg(windows)'.dependencies] # For windows
winapi = { version = "0.3.9", features = ["sysinfoapi", "memoryapi", "handleapi", "errhandlingapi"] }

[features]
char_spec = []
span = []
debug = []
default = ["char_spec", "span"]