[package]
name = "tuplan-vm"
version = "0.1.0"
edition = "2021"

[features]
# Makes sure the bytecode is valid before executing it.
checked = []
# Displays which instructions are being called.
trace = []
# Shows instructions per millisecond
perf = []

[dependencies]
tuplan-ir = { path = "../tuplan-ir", version = "0.1.0" }
disc = "0.1.0"